2015-05-01 John Wu <John dot Wu at ACM dot org>
	* src/util.h: change the read functions of sharedInt32 and
	sharedInt64 to invoke the mutex lock when atomic is not supported
	(per request of Jilong Wang)
	* src/util.h, configure.ac: add conditional macro for std::atomic,
	use std::atomic in sharedInt32 and sharedInt64 when
	HAVE_ATOMIC_TEMPLATE

2015-04-30 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: in function getColumn, the column name of the form
	'__xx' is interpreted as decimal numbers, but the function
	selectClause::fillNames that generated these names are producing
	hexadecimal numbers

2015-03-31 Petr Velan <petr dot velan at cesnet dot cz>
	* src/util.cpp: move the include <pwd.h> statement to after util.h
	is included because HAVE_GETPWUID is defined in util.h (which
	eventually get it from src/fastbit-config.h)

2015-03-30 John Wu <John dot Wu at ACM dot org>
	* configure.ac: add -DWITHOUT_FASTBIT_CONFIG_H when attempting to
	compile util.cpp for testing the compiler flags needed for popen
	and pclose

2015-03-25 John Wu <John dot Wu at ACM dot org>
	* src/const.h: on MINGW, stricmp should be _stricmp
	* src/util.cpp: add conditional compilation for pwd.h on MinGW

2015-03-24 John Wu <John dot Wu at ACM dot org>
	* runconfig: add special flags for compiling on cygwin and mingw

2015-03-21 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: countPages return at least one when the mask is
	not empty (this could happen when all the elements are on the same
	page)

2015-03-18 John Wu <John dot Wu at ACM dot org>
	* win: convert *.vcproj to *.vcxproj, update ibis.sln, rename the
	old file as ibis-vc8.sln

2015-03-11 John Wu <John dot Wu at ACM dot org>
	* src/iapi.cpp: add print statements to public functions

2015-03-04 John Wu <John dot Wu at ACM dot org>
	* src/colValues.cpp: review all sorting functions to check for the
	condition identified by Divya

2015-03-04 Divya Chandrasekar <chadivya at a9 dot com>